--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "gumption-api",
   "main": "app.js",
   "dependencies": {
-    "body-parser": "*",
-    "express": "^5.0.0-alpha.1",
-    "mongoose": "^4.0.0"
+    "body-parser": "~1.12.2",
+    "express": "~4.12.3",
+    "mongoose": "~3.8.0"
   }
 }
