--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "dependencies": {
     "body-parser": "~1.12.2",
     "express": "~4.12.3",
-    "mongoose": "~3.8.0",
-    "morgan": "latest",
-    "jsonwebtoken": "0.4.0"
+    "mongoose": "~3.8.0"
   }
 }
